# jhu_605_617_gpu_programming

./: .gitignore  README.md
module12/: CMakeLists.txt  README.md
module12/scripts/: build.sh  run.sh
module12/src/: convolution.cl  main.cpp
module3/: Makefile  README.md  analysis.md  assignment  assignment.cu  observations.txt
module4/: Makefile  assignment  assignment.c  global_memory  global_memory.cu  host_memory  host_memory.cu
module5/: CMakeLists.txt  README.md  build.sh
module5/include/: kernels.cuh
module5/src/: kernels.cu  main.cu  utils.cpp  utils.h
module6/: CMakeLists.txt  bash.sh  stream_example
module6/src/: kernels.cu  kernels.cuh  main.cu
module7/: cufft_example
module9/: CMakeLists.txt  Makefile  build.sh
module9/src/: kernels.cu  kernels.cuh  main.cu  noise_fft  utils.h
optical_flow/: CMakeLists.txt
optical_flow/scrips/: bouncing_ball.py  plot_results.py
optical_flow/src/: cpu_flow.cpp  cpu_flow.h  gpu_flow.cu  gpu_flow.h  kernels.cu  kernels.cuh  kernels_preprocess.cu  kernels_preprocess.cuh  main.cpp  pipeline.cu  pipeline.cuh  utils.cpp  utils.h
